<resources>
    <string name="app_name">Secret Santa</string>
    <string name="create_event_button">Nuovo evento</string>
    <string name="no_events_configured">Non ci sono eventi da mostrare</string>
    <string name="no_participants_configured">Non ci sono partecipanti da mostrare</string>
    <string name="dialog_confirm_database_reset">Confermare cancellazione dati?</string>
    <string name="dialog_confirm_choice">Si</string>
    <string name="dialog_cancel_choice">No</string>
    <string name="save_entity">Salva</string>
    <string name="event_name_label">Nome evento:</string>
    <string name="event_date_label">Data:</string>
    <string name="event_location_label">Luogo:</string>
    <string name="event_description_label">Descrizione:</string>
    <string name="event_budget_label">Budget:</string>
    <string name="event_budget_min_label">Min:</string>
    <string name="event_budget_max_label">Max:</string>
    <string name="clean_database_button">Canc. Dati</string>
    <string name="participant_firstname_label">Nome:</string>
    <string name="participant_lastname_label">Cognome:</string>
    <string name="participant_phone_label">Telefono:</string>
    <string name="participant_email_label">Email:</string>
    <string name="create_participant_button">Nuovo partecipante</string>
    <string name="manage_participant_button">Gestione partecipanti</string>
    <string name="back_to_event_list">Torna a lista eventi</string>
    <string name="participant_list">Lista partecipanti:</string>
    <string name="add_participant_button">Agg. Partecipante</string>
    <string name="back_button">Indietro</string>
    <string name="add_exclusion_button">Agg. esclusione</string>
    <string name="participant_exclusion_label">Lista esclusioni:</string>
    <string name="delete_button">Cancella</string>
    <string name="manage_event_button">Gestione eventi</string>
    <string name="created_events_label">Eventi creati:</string>
    <string name="created_participants_label">Partecipanti creati:</string>
    <string name="extraction_failed_exception">Non è stato possibile completare l\'estrazione</string>
    <string name="mail_sending_failed_exception">Non è stato possibile inviare tutte le email</string>
    <string name="mail_sending_completed">Mail inviate: </string>
    <string name="extraction_map_creation_exception">Non è stato possibile recuperare i dati necessari per l\'estrazione</string>
    <string name="extraction_completed">Estrazione effettuata</string>
    <string name="perform_extraction_button">Estrazione</string>
    <string name="perform_new_extraction_button">Nuova estrazione</string>
    <string name="send_mail_button">Invia mail</string>
</resources>
